--- a/deneme123/package.json
+++ b/deneme123/package.json
@@ -1,26 +1,24 @@
 {
-  "name": "deneme123",
-  "version": "0.0.0",
-  "private": true,
+  "name": "products-api",
+  "version": "1.0.0",
+  "main": "index.js",
+  "license": "MIT",
   "scripts": {
-    "start": "node ./bin/www",
-    "watch": "nodemon"
+    "start": "node ./index.js"
   },
   "dependencies": {
-    "body-parser": "^1.20.1",
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "dotenv": "^16.0.3",
-    "express": "~4.16.1",
-    "http-errors": "~1.6.3",
-    "mongoose": "^6.9.0",
-    "morgan": "~1.9.1",
-    "pug": "~3.0.2",
-    "yarn": "^1.22.19"
+    "@hapi/joi": "^17.1.1",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "git": "^0.1.5",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.0.12",
+    "node": "^17.0.1"
   },
   "devDependencies": {
-    "connect-livereload": "^0.6.1",
-    "livereload": "^0.9.3",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.14"
   }
 }
